# recalibra

./: .env.example  .gitignore  PUSH_TO_GITHUB.sh  README.md  check-status.sh  create_demo_data.py  demo.py  demo_data.csv  docker-compose.yml  docker-start.sh  docker-stop.sh  pyproject.toml  simple_demo.py  start-dev.sh  start.sh  stop-dev.sh  test_api.py  test_demo.py  upgrade-python.sh
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  __init__.py  audit_logger.py  background_tasks.py  cleanup_empty_models.py  clear_fake_drift_checks.py  cloudwatch_monitor.py  conftest.py  create_demo_data.py  data_normalization.py  demo_setup.py  fix_backend.sh  fix_drift_checks_schema.py  import_real_data.py  kill_port_8000.sh  make_real_demo.py  mlflow_manager.py  moe_predictions_sample.csv  populate_complete_demo.py  populate_realistic_demo.py  real_models_data.csv  recalibra.db.old  requirements.txt  run.sh  run_api.sh  run_new_api.sh  s3_manager.py  sample_moe_predictions.csv  setup_demo_model.py  start.sh  start_backend.sh  start_fastapi.sh  test_benchling_connection.py  test_benchling_moe.py  test_benchling_real.py  test_fastapi.py  websocket_manager.py
backend/app/: __init__.py  (+1 more)
dashboard/: README.md
docs/: DEMO_READY.md  GITHUB_SETUP.md  QUICKSTART.md  SETUP.md  SETUP_INSTRUCTIONS.md  architecture.md
frontend/: .dockerignore  config-overrides.js  package-lock.json  package.json
sample_data/: README.md  experimental_results.csv  import_csv.py  molecules.csv  predictions.csv
sdk/: README.md  example_usage.py  setup.py
tests/: test_metrics.py
(+77 files in other folders)
