[tool.poetry]
name = "recalibra"
version = "0.1.0"
description = "Recalibra core services and SDK"
authors = ["Recalibra Team <dev@recalibra.ai>"]
readme = "README.md"
packages = [{ include = "recalibra", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlmodel = "^0.0.21"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
alembic = "^1.13.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
scipy = "^1.11.0"
scikit-learn = "^1.4.0"
celery = "^5.3.0"
redis = "^5.0.0"
typer = "^0.12.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-asyncio = "^0.23.0"
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
types-requests = "^2.31.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E203", "E266", "E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

